cluster/ingress/hospital-hms-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hospital-hms-ingress
  namespace: hospital-dev

spec:
  ingressClassName: aws-alb
  rules:
  - host: hospital-hms-poc.app.io
    http:
      paths:
      - path: /api/v1/opd-svc
        pathType: Prefix
        backend:
          service:
            name: opd-service
            port:
              name: http
              number: 8080

      - path: /api/v1/billing-svc
        pathType: Prefix
        backend:
          service:
            name: billing-service
            port:
              name: http
              number: 8000

      - path: /api/v1/appointment-svc
        pathType: Prefix
        backend:
          service:
            name: appointment-service
            port:
              name: http
              number: 8000
